fixed css on static pages causing button overlaps

--- a/public/stylesheets/cypress.css
+++ b/public/stylesheets/cypress.css
@@ -823,3 +823,7 @@ section.free-text dt{
 section.free-text dd{
 	padding:5px;
 }
+
+h2.static-header{
+padding-bottom:10px;
+}
